Looping Over Arrays
blah blah blah

--- a/Day 8 Files/Class Examples/css/style.css
+++ b/Day 8 Files/Class Examples/css/style.css
@@ -7,7 +7,7 @@ CSS
 body {
   font-family: verdana, sans-serif;
   color: #ffffff;
-  background-color: #5fc8c5;
+  background-color: #60ca75;
 }
 
 h1 {
