--- a/Week4_Functions_Assignment/Functions_Wacky/css/style.css
+++ b/Week4_Functions_Assignment/Functions_Wacky/css/style.css
@@ -6,12 +6,12 @@ CSS
 
 body {
   font-family: verdana, sans-serif;
-  color: #ffffff;
+  color: #000000;
   background-color: #eaf135;
 }
 
 h1 {
-  font-size: 8em;
+  font-size: 6em;
 }
 
 h2 {
